atualizado inicializador de dados e refatoração do controle de usuários para incluir novos campos e métodos