@@ -1,6 +1,8 @@
 package br.com.gfctech.project_manager.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -9,7 +11,6 @@ import br.com.gfctech.project_manager.dto.UserDTO;
 import br.com.gfctech.project_manager.entity.UserEntity;
 import br.com.gfctech.project_manager.repository.UserRepository;
 
-
 @Service
 public class UserService {
 
@@ -17,39 +18,41 @@ public class UserService {
     private UserRepository userRepository;
 
     @Transactional(readOnly = true)
-    public List<UserDTO> findAll() {
-        List<UserEntity> users = userRepository.findAll();
-        return users.stream().map(UserDTO::new).toList();
+    public List<UserDTO> getAllUsers() {
+        return userRepository.findAll().stream().map(UserDTO::new).collect(Collectors.toList());
     }
 
     @Transactional
-    public void insert(UserDTO user) {
-        UserEntity userEntity = new UserEntity(user);
+    public UserDTO addUser(UserDTO userDTO) {
+        UserEntity userEntity = new UserEntity(userDTO);
         userRepository.save(userEntity);
+        return new UserDTO(userEntity);
     }
 
     @Transactional
-    public UserDTO update(UserDTO user) {
-        UserEntity existingUser = userRepository.findById(user.getId())
-                .orElseThrow(() -> new RuntimeException("User not found with ID: " + user.getId()));
+    public UserDTO updateUser(Long id, UserDTO userDTO) {
+        UserEntity existingUser = userRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("User not found with ID: " + id));
 
-        existingUser.setName(user.getName());
-        existingUser.setEmail(user.getEmail());
-        // Atualize apenas os campos necessários
+        existingUser.setName(userDTO.getName());
+        existingUser.setEmail(userDTO.getEmail());
+        // Atualize outros campos conforme necessário
 
         return new UserDTO(userRepository.save(existingUser));
     }
 
     @Transactional
-    public void delete(Long id) {
+    public UserDTO updatePermissions(Long id, String role) {
+        UserEntity user = userRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("User not found with ID: " + id));
+        user.setRole(role);
+        return new UserDTO(userRepository.save(user));
+    }
+
+    @Transactional
+    public void deleteUser(Long id) {
         UserEntity user = userRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("User not found with ID: " + id));
         userRepository.delete(user);
-    }
-
-    @Transactional(readOnly = true)
-    public UserDTO findById(Long id) {
-        return new UserDTO(userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("User not found with ID: " + id)));
     }
 }
